# organize

./: README.md  alembic.ini  changelog.md  design.drawio  pyproject.toml
.github/actions/: pr_agent.py
.github/workflows/: github_action.yml
alembic/: env.py
scripts/nginx/: nginx.conf
scripts/shell/: install.md
scripts/systemd/: organize.service
src/backend/: app.py  langgraph.json
src/backend/apis/cache/: valkey.py
src/backend/apis/error/: __init__.py  handles.py
src/backend/apis/routers/: dashboard.py  data.py  inference.py  internal.py
src/backend/apis/schema/: inference.py
src/backend/apis/schemas/: dashboard.py  internal.py
src/backend/apis/v1/: __init__.py  routers.py
src/backend/apis/v1/controller/: __init__.py  agent.py  conversation.py  metric.py  task.py
src/backend/apis/v1/dto/: agentDTO.py
src/backend/apis/v1/endpoints/: __init__.py  dashboard.py  data.py  inference.py  internal.py
src/backend/config/: logs.py  middleware.py  settings.py
src/backend/config/middleware/: CORS.py
src/backend/core/: example.py  logs.py
src/backend/core/agents/: example.ipynb  example.py
src/backend/db/: models.py  session.py
src/backend/models/: agent.py  conversation.py
src/backend/utils/: settings.py
src/backend/utils/error/: handles.py
src/frontend/: package-lock.json  package.json
