[project]
name = "organize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.0.11",
    "nemo-toolkit[all]>=2.3.0",
    "pydantic>=2.11.4",
    "python-a2a>=0.5.4",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
