[project]
name = "organize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "langgraph-cli>=0.2.10",
    "litestar>=2.16.0",
    "nemo-toolkit[all]>=2.3.0",
    "pydantic>=2.11.4",
    "python-a2a>=0.5.4",
    "sqlalchemy>=2.0.40",
    "stripe>=12.2.0",
    "uvicorn>=0.34.2",
]
